# korean-morphological-analyzer

./: .gitignore  Makefile.am  Makefile.in  index.html  libIDX.sln  libIDX.vcproj
Dict/include/: MADIC_Bojo.h  MADIC_DicInfo.h  MADIC_Eomi.h  MADIC_Josa.h
Dict/src/: BD_MakeHanBuf.c  SD_JESearchWordInTrieDic.c  SD_LoadDictionary.c  SD_SearchDic.c  SD_UserAnswerDic.c
DictDB/k_dic/: DICBOJO.DIC  DICBTAIL.DIC  DICEOMI.DIC  DICJOSA.DIC  DICMAIN.DIC  DICPTAIL.DIC  DICTAIL.DIC  HANJA2HANGUL.TBL  hv_table
IDX/include/: IDX_StopWord.h  IDX_TokenProc.h  MA_Interface.h
IDX/src/: ConvertUTF.c  IDX_CrossTermDic.c  IDX_FilterSecVal.c  IDX_Hanja2Hangul.c  IDX_Hanja2Hangul.h  IDX_HanjaVariant.c  IDX_IndexAsIs.c  IDX_IndexAsIsMA.c  IDX_IndexAsNumeric.c  IDX_IndexByCDToken.c  IDX_IndexByChar.c  IDX_IndexByMixMA.c  IDX_StopWord.c  IDX_strlower.c  UnicodeBlocks31.h  duem.h  hj2hg.h  unijohab.c
MorpAnal/include/: MA_Hash.h  MA_Jo2Wan.h  MA_LexInfo.h  MA_Memory.h  MA_NGram.h  MA_SearchTailDic.h  MA_ShmOP.h  MA_StemProc.h  MA_SysHeader.h  MA_UtilLib.h
MorpAnal/src/: MA_CNWordCheck.c  MA_GenMAResult.c  MA_Hj2Hg.c  MA_IdaCheck.c  MA_JosaCheck.c  MA_SearchTailDic.c  MA_SusaCheck.c  MA_UnknownWord.c  MA_VAJubCheck.c
MorpAnal/util-lib/: LIB_FileOpen.c  LIB_FileSeek.c  LIB_FileWrite.c  LIB_MemoryReAlloc.c
data/k_dic/: DICBTAIL.CON  DICNTAIL.CON  DICNTAIL.DIC  DICPTAIL.CON  STOPWORDS  xxx
include/: IDX_common.h  IDX_token.h  IDX_user.h
src/Dict/include/: MADIC_Func.h  MADIC_Global.h  MADIC_Type.h
src/Dict/src/: BD_ClearDic.c  BD_ClearDic.cpp  BD_InitDicHeader.c  BD_InitDicHeader.cpp  BD_MakeHanBuf.cpp  BD_SearchCharInCurrentLevel.cpp  SD_GetJEHeaderIndex.c  SD_GetJEHeaderIndex.cpp  SD_JESearchWordInTrieDic.cpp  SD_LoadDictionary.cpp  SD_SearchJECharInCurrentLevel.c  SD_SearchWordInTrieDic.cpp  SD_UserAnswerDic.cpp  SD_UserDic.c  SD_UserDic.cpp
src/IDX/include/: ConvertUTF.h  HVTable.h  HanjaVariantDef.h  hj2hg.h
src/IDX/src/: GetCodeType.cpp  IDX_AddIndexBigram.c  IDX_AddIndexBigram.cpp  IDX_CrossTermDic.cpp  IDX_Hanja2Hangul.cpp  IDX_HanjaVariant.cpp  IDX_IndexAsIs.cpp  IDX_IndexByCDMA.cpp  IDX_IndexByCDToken.cpp  IDX_IndexByChar.cpp  IDX_IndexByMA.cpp  IDX_IndexByMixChar.cpp  IDX_IndexByMixMA.cpp  IDX_IndexByToken.cpp  IDX_IndexDNA.c  IDX_IndexProtein.c  IDX_IndexTRDNA.cpp  IDX_MsgHandler.cpp  IDX_TokenProc.cpp  IDX_duem_proc.cpp  IDX_strip_affixes.c  IDX_strip_affixes.cpp
src/MorpAnal/include/: MA_BufferMgr.h  MA_CompileMode.h  MA_Func.h  MA_GMacro.h  MA_Global.h  MA_HanCode.h  MA_HanType.h  MA_Hj2Hg.h  MA_Interface.h  MA_Jo2Wan.h  MA_JosaConst.h  MA_Jubmi.h  MA_Memory.h  MA_PreEomi.h  MA_ReturnCode.h  MA_SearchTailDic.h  MA_ShmOP.h  MA_Susa.h  MA_Token.h  MA_Type.h  MA_VAJubsa.h
src/MorpAnal/src/: MA_CNWordCheck.cpp  MA_CompareCode.c  MA_CompoundNoun.cpp  MA_Cordic.c  MA_Cordic.cpp  MA_EomiCheck.cpp  MA_GenMAResult.cpp  MA_HashFunc.c  MA_Irregular.cpp  MA_JosaCheck.cpp  MA_KAnalysisWord.cpp  MA_MainIDXProc.c  MA_MainIDXProc.cpp  MA_SearchCNDic.cpp  MA_SearchTailDic.cpp  MA_ShmOP.c  MA_SusaCheck.cpp  MA_TopicMorpAnal.c  MA_TopicMorpAnal.cpp  MA_UnknownWord.cpp
src/MorpAnal/util-lib/: LIB_CleanStr.c  LIB_FileClose.c  LIB_FileOpen.cpp  LIB_FileRead.cpp  LIB_FileTell.cpp  LIB_MemoryCreate.cpp  LIB_MemoryDestroy.cpp  LIB_MemoryMove.c  LIB_MemoryMove.cpp  LIB_MemoryReAlloc.cpp
test/: sample.cpp  sample.vcproj
